--- a/static/styles.css
+++ b/static/styles.css
@@ -33,7 +33,7 @@ body {
     border: 1px solid white;
     margin-top: 1.5rem;
     margin-bottom: 1.5rem;
-    min-width: 25rem;
+    min-width: 22rem;
 }
 
 .nullwave {
@@ -65,26 +65,26 @@ body {
 }
 
 .article {
-    padding-top: 0.2rem;
-    padding-bottom: 0.2rem;
+    line-height: 1.8rem;
+    /* padding: 0.7rem; */
 }
 
 .article-image {
     max-width: 100%;
-    margin-top: 0.5rem;
-    margin-bottom: 0.25rem;
+    max-height: 25rem;
+    padding-bottom: 0.5rem;
+
 }
 
 .article-title {
     font-family: 'Manrope';
-    height: 1.8rem;
     font-size: 1.4rem;
     font-variation-settings: 'wght' 400;
 }
 
 .article-author {
     font-size: 1.2rem;
-    height: 2rem;
+    /* height: 2rem; */
     font-variation-settings: 'wght' 200;
 }
 
