--- a/static/styles.css
+++ b/static/styles.css
@@ -33,16 +33,15 @@ body {
     border: 1px solid white;
     margin-top: 1.5rem;
     margin-bottom: 1.5rem;
-    min-width: 22rem;
+    min-width: 20em;
 }
 
 .nullwave {
     font-family: 'TiltPrism';
-    font-size: 3.25rem;
+    font-size: 3rem;
     font-variation-settings: 'HROT' -30, 'VROT' -28;
     transition: font-variation-settings 0.9s ease;
-    height: 5rem;
-    line-height: 5rem;
+    position: relative;
 }
 
 .nullwave:hover {
@@ -65,21 +64,30 @@ body {
 }
 
 .article {
-    line-height: 1.8rem;
-    /* padding: 0.7rem; */
+    line-height: 1.7rem;
+    padding-top: 0.7rem;
+    padding-bottom: 0.7rem;
 }
 
 .article-image {
     max-width: 100%;
     max-height: 25rem;
-    padding-bottom: 0.5rem;
-
 }
 
 .article-title {
+    container-type: inline-size;
     font-family: 'Manrope';
-    font-size: 1.4rem;
-    font-variation-settings: 'wght' 400;
+    font-size: 1.3rem;
+    padding-top: 0.4rem;
+    padding-right: 1rem;
+    padding-left: 1rem;
+    font-variation-settings: 'wght' 450;
+}
+
+@container (max-width: 1rem) {
+    .article-title {
+        font-size: 10rem;
+    }
 }
 
 .article-author {
