--- a/static/styles.css
+++ b/static/styles.css
@@ -31,6 +31,8 @@ body {
 
 .main-container {
     border: 1px solid white;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
     margin-top: 1.5rem;
     margin-bottom: 1.5rem;
     min-width: 20em;
