--- a/static/styles.css
+++ b/static/styles.css
@@ -1,15 +1,15 @@
 html {
     font-size: 20px;
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
+    /* padding-left: 1.5rem;
+    padding-right: 1.5rem; */
     margin: auto;
+    align-content: center;
 }
 
 body {
     background-color: black;
     color: white;
     font-family: 'Manrope';
-    
     max-width: 55rem;
     font-weight: 100;
 }
@@ -32,7 +32,7 @@ body {
 
 .main-container {
     border: 1px solid white;
-    margin: 1.5rem;
+    /* margin: 1.5rem; */
     /* margin-top: 1.5rem;
     margin-bottom: 1.5rem; */
     min-width: 20em;
