--- a/static/styles.css
+++ b/static/styles.css
@@ -35,6 +35,7 @@ body {
 .main-container {
     border: 1px solid white;
     min-width: 24rem;
+    max-width: 60rem;
 }
 
 .nullwave {
@@ -69,6 +70,8 @@ body {
     line-height: 1.7rem;
     padding-top: 0.9rem;
     padding-bottom: 0.7rem;
+    padding-right: 1.5rem;
+    padding-left: 1.5rem;
 }
 
 .article-image {
@@ -77,7 +80,6 @@ body {
 }
 
 .article-title {
-    container-type: inline-size;
     font-family: 'Manrope';
     font-size: 1.35rem;
     padding-top: 0.4rem;
@@ -88,6 +90,8 @@ body {
 
 .article-author {
     font-size: 1.2rem;
+    padding-right: 1.5rem;
+    padding-left: 1.5rem;
     /* height: 2rem; */
     font-variation-settings: 'wght' 200;
 }
