--- a/static/styles.css
+++ b/static/styles.css
@@ -17,7 +17,7 @@ body {
 }
 
 .site-padding {
-    padding: 1rem;
+    padding: 15px;
 }
 
 .border-right {
@@ -99,7 +99,7 @@ body {
     font-variation-settings: 'wght' 200;
 }
 
-.writer-name {
+.creator-name {
     font-weight: 800;
     font-size: 2rem;
     text-align: center;
@@ -107,7 +107,7 @@ body {
     margin-bottom: 0.75rem;
 }
 
-.writer-biography {
+.creator-biography {
     margin-bottom: 0px;
 }
 
@@ -115,13 +115,13 @@ body {
     max-width: 21rem;
 }
 
-.writer-image-unstacked {
+.creator-image-unstacked {
     float: left;
     max-width: 100%;
     margin-right: 1.5rem;
 }
 
-.writer-image-stacked {
+.creator-image-stacked {
     display: block;
     margin-left: auto;
     margin-right: auto;
