--- a/static/styles.css
+++ b/static/styles.css
@@ -83,6 +83,7 @@ h1 {
 .article-body {
     padding: calc(0.5rem + 3.5vw);
     padding-top: 1vw;
+    padding-bottom: 0.5rem;
     line-height: calc(1.7rem + 0.5vw);
     font-size: calc(1rem + 0.25vw);
 }
