--- a/static/styles.css
+++ b/static/styles.css
@@ -1,5 +1,5 @@
 html {
-    font-size: calc(15px + 0.2vw);
+    font-size: min(calc(11px + 1.2vw), 20px);
     display: flex;
     justify-content: safe center;
     align-items: safe center;
@@ -49,9 +49,9 @@ h1 {
 }
 
 .nullwave {
-    line-height: calc(4rem + 0.8vw);
+    line-height: 4rem;
     font-family: 'TiltPrism';
-    font-size: calc(3.3rem + 0.8vw);
+    font-size: 3.5rem;
     font-variation-settings: 'HROT' -30, 'VROT' -28;
     transition: font-variation-settings 0.9s ease;
 }
@@ -61,16 +61,16 @@ h1 {
 }
 
 .variable-manrope {
-    transition: font-variation-settings 0.75s ease;
+    transition: font-variation-settings 0.7s ease;
 }
 
 .variable-manrope:hover {
-    font-variation-settings: 'wght' 650;
+    font-variation-settings: 'wght' 500;
 }
 
 .header-link {
     font-size: 1.2rem;
-    font-variation-settings: 'wght' 200;
+    font-variation-settings: 'wght' 300;
     height: 2.5rem;
     line-height: 2.5rem;
 }
@@ -81,12 +81,20 @@ h1 {
     text-align: center;
 }
 
+.article-thumbnail {
+    padding-left: 0.25rem;
+    padding-right: 0.25rem;
+    max-width: 100%;
+    max-height: 26rem;
+}
+
 .article-body {
-    padding: calc(0.5rem + 3.5vw);
-    padding-top: 1vw;
+    padding: min(calc(0.75rem + 3vw), 50px);
+    padding-top: min(1vw, 0.3rem);
     padding-bottom: 0.5rem;
-    line-height: calc(1.7rem + 0.5vw);
-    font-size: calc(1rem + 0.25vw);
+    line-height: min(calc(1.8rem + 0.5vw), 30px);
+    font-size: min(calc(1rem + 0.25vw), 20px);
+    word-spacing: 1px;
 }
 
 .article-screenshot {
@@ -97,25 +105,23 @@ h1 {
     padding-bottom: 2rem;
 }
 
-.article-thumbnail {
-    padding-left: 0.25rem;
-    padding-right: 0.25rem;
-    max-width: 100%;
-    max-height: 26rem;
-}
-
 .article-title {
-    font-size: calc(1.1rem + 0.75vw);
+    font-size: min(calc(0.7rem + 2.5vw), 39px);
     font-family: 'Manrope';
-    font-variation-settings: 'wght' 450;
+    font-variation-settings: 'wght' 400;
 }
 
 .article-author {
-    font-size: calc(1rem + 0.5vw);
+    font-size: min(calc(0.5rem + 2vw), 30px);
     padding-left: 1rem;
     padding-right: 1rem;
     margin-top: -0.25rem;
-    font-variation-settings: 'wght' 200;
+    font-variation-settings: 'wght' 300;
+}
+
+.essay-left {
+    text-align: left;
+
 }
 
 .creator-name {
