weeklong attempt at essays tab

--- a/static/styles.css
+++ b/static/styles.css
@@ -88,6 +88,13 @@ h1 {
     max-height: 26rem;
 }
 
+.article-thumbnail-small {
+    align-items: start;
+    max-width: 100%;
+    padding: 0;
+    margin: 0;
+}
+
 .article-body {
     padding: min(calc(0.75rem + 3vw), 50px);
     padding-top: min(1vw, 0.3rem);
@@ -111,17 +118,31 @@ h1 {
     font-variation-settings: 'wght' 400;
 }
 
+.essays{
+    text-align: center;
+}
+
+.essays-title {
+    padding: min(1vw, 12px);
+    padding-top: min(1.5vw, 18px);
+    padding-bottom: 0;
+    font-size: min(5vw, 61px);
+    font-family: 'Manrope';
+    font-variation-settings: 'wght' 400;
+}
+
+.essays-author {
+    font-size: min(3vw, 36px);
+    font-family: 'Manrope';
+    font-variation-settings: 'wght' 400;
+}
+
 .article-author {
     font-size: min(calc(0.5rem + 2vw), 30px);
     padding-left: 1rem;
     padding-right: 1rem;
     margin-top: -0.25rem;
     font-variation-settings: 'wght' 300;
-}
-
-.essay-left {
-    text-align: left;
-
 }
 
 .creator-name {
