--- a/static/styles.css
+++ b/static/styles.css
@@ -91,6 +91,7 @@ h1 {
 .article-thumbnail-small {
     align-items: start;
     max-width: 100%;
+    /* max-height: 10rem; */
     padding: 0;
     margin: 0;
 }
@@ -113,26 +114,8 @@ h1 {
 }
 
 .article-title {
+    padding-top: 0.25rem;
     font-size: min(calc(0.7rem + 2.5vw), 39px);
-    font-family: 'Manrope';
-    font-variation-settings: 'wght' 400;
-}
-
-.essays{
-    text-align: center;
-}
-
-.essays-title {
-    padding: min(1vw, 12px);
-    padding-top: min(1.5vw, 18px);
-    padding-bottom: 0;
-    font-size: min(5vw, 61px);
-    font-family: 'Manrope';
-    font-variation-settings: 'wght' 400;
-}
-
-.essays-author {
-    font-size: min(3vw, 36px);
     font-family: 'Manrope';
     font-variation-settings: 'wght' 400;
 }
@@ -141,8 +124,27 @@ h1 {
     font-size: min(calc(0.5rem + 2vw), 30px);
     padding-left: 1rem;
     padding-right: 1rem;
+    margin-bottom: -0.1rem;
     margin-top: -0.25rem;
     font-variation-settings: 'wght' 300;
+}
+
+.essays {
+    text-align: left;
+    padding-top: 0.25rem;
+    padding-left: min(2vw, 24px);
+}
+
+.essays-title {
+    font-size: min(4vw, 48.5px);
+    font-family: 'Manrope';
+    font-variation-settings: 'wght' 400;
+}
+
+.essays-author {
+    font-size: min(2.75vw, 33px);
+    font-family: 'Manrope';
+    font-variation-settings: 'wght' 400;
 }
 
 .creator-name {
