i should be banned from css

--- a/static/styles.css
+++ b/static/styles.css
@@ -3,6 +3,11 @@ html {
     display: flex;
     justify-content: safe center;
     align-items: safe center;
+    zoom: 100%;
+}
+
+:root {
+    --zoom: 1.0;
 }
 
 body {
@@ -131,18 +136,29 @@ h1 {
 
 .essays {
     text-align: left;
-    padding-top: 0.25rem;
-    padding-left: min(2vw, 24px);
+    padding: min(2vw, 24.3333px);
 }
 
 .essays-title {
-    font-size: min(calc(5vw - 4.8px), 56px);
+    font-size: max(min(calc(4.5vw - 2.925px), 51.825px), 17.325px);
+    /* font-size: max(calc(min(calc(4.5vw - 2.925px), 51.825px)), 1rem); */
+    padding-top: 0.1em;
+    /* font-size: min(calc(5vw - 4.8px), 56px); */
+    line-height: 1em;
     font-family: 'Manrope';
     font-variation-settings: 'wght' 400;
 }
 
 .essays-author {
-    font-size: min(2.5vw, 30.5px);
+    /* margin-top: max(-vw, -6px); */
+    font-size: max(min(calc(3.2vw - 2.08px), 36.853px), 12.32px);
+    font-family: 'Manrope';
+    font-variation-settings: 'wght' 300;
+}
+
+.essays-quote {
+    padding-top: 0.5em;
+    font-size: max(min(calc(2.7vw - 1.755px), 31.095px), 10.395px);
     font-family: 'Manrope';
     font-variation-settings: 'wght' 300;
 }
