--- a/static/styles.css
+++ b/static/styles.css
@@ -105,11 +105,11 @@ h1 {
 }
 
 .article-screenshot {
-    padding-left: 0.25rem;
-    padding-right: 0.25rem;
+    margin-left: 0.25rem;
+    margin-right: 0.25rem;
     max-width: 100%;
-    padding-top: 1rem;
-    padding-bottom: 2rem;
+    margin-top: 1rem;
+    margin-bottom: 2rem;
 }
 
 .article-title {
