--- a/static/styles.css
+++ b/static/styles.css
@@ -156,6 +156,11 @@ h1 {
     font-variation-settings: 'wght' 300;
 }
 
+.creators {
+    text-align: left;
+    padding: clamp(7.65px, calc(1.7vw), 20.666px);
+}
+
 .creator-name {
     font-weight: 800;
     font-size: 2rem;
@@ -173,7 +178,7 @@ h1 {
 }
 
 .creator-thumbnail-small {
-    max-width: 100%;
+    width: 100%;
     padding: 0;
     margin: 0;
 }
