--- a/static/styles.css
+++ b/static/styles.css
@@ -164,20 +164,20 @@ h1 {
 .creators {
     text-align: left;
     padding: clamp(7.65px, calc(1.7vw - 1.105px), 20.666px);
-    padding-left: clamp(1px, calc(3vw - 1.95px), 34.5833px);
+    padding-left: clamp(11.183px, calc(3vw - 1.95px), 34.5833px);
 }
 
 .creator-name {
-    font-size: clamp(1px, calc(5vw - 3.25px), 57.7px);
+    font-size: clamp(18.65px, calc(5vw - 3.25px), 57.7px);
     padding-top: 0.05rem;
     font-family: 'Manrope';
     font-variation-settings: 'wght' 400;
-    line-height: clamp(0px, 0.9em, 51.7667px);
+    line-height: clamp(16.78px, 0.9em, 51.7667px);
 }
 
 .creator-details {
-    font-size: clamp(1px, calc(3vw - 1.95px), 34.5833px);
-    padding-top: clamp(0px, 0.05em, 2.8733px);
+    font-size: clamp(11.183px, calc(3vw - 1.95px), 34.5833px);
+    padding-top: clamp(13.14pxpx, 0.05em, 2.8733px);
     font-family: 'Manrope';
     font-variation-settings: 'wght' 400;
     line-height: 1.2em;
