--- a/static/styles.css
+++ b/static/styles.css
@@ -13,13 +13,13 @@ body {
     overflow-y: scroll;
 }
 
-h1 {
+/* h1 {
     font-size: 2.5rem;
 }
 
 h3 {
     font-size: 2rem;
-}
+} */
 
 .hack-image {
     max-width: 0%;
@@ -152,6 +152,7 @@ h3 {
     font-size: 0.75em;
     justify-content: center;
     text-align: center;
+    align-items: center;
 }
 
 .essays {
