--- a/static/styles.css
+++ b/static/styles.css
@@ -140,6 +140,7 @@ h3 {
     margin-top: -0.4rem;
     padding-left: 1em;
     padding-right: 1em;
+    font-weight: 100;
     font-variation-settings: 'wght' 300;
 }
 
