--- a/static/styles.css
+++ b/static/styles.css
@@ -13,13 +13,13 @@ body {
     overflow-y: scroll;
 }
 
-/* h1 {
+h1 {
     font-size: 2.5rem;
 }
 
 h3 {
     font-size: 2rem;
-} */
+}
 
 .hack-image {
     max-width: 0%;
