--- a/static/styles.css
+++ b/static/styles.css
@@ -13,14 +13,6 @@ body {
     overflow-y: scroll;
 }
 
-h1 {
-    font-size: 2.5rem;
-}
-
-h3 {
-    font-size: 2rem;
-}
-
 .hack-image {
     max-width: 0%;
 }
@@ -137,11 +129,18 @@ h3 {
 
 .author {
     font-size: 1.5rem;
-    margin-top: -0.4rem;
+    margin-top: -0.75rem;
     padding-left: 1em;
     padding-right: 1em;
     font-weight: 100;
     font-variation-settings: 'wght' 300;
+}
+
+.title {
+    font-size: 2.25rem;
+    font-weight: 400;
+    margin: 0.9rem;
+    line-height: 2.5rem;
 }
 
 .article-link {
