--- a/static/styles.css
+++ b/static/styles.css
@@ -122,7 +122,8 @@ body {
     font-size: clamp(17px, calc(0.5rem + 2vw), 30px);
     padding-left: 1em;
     padding-right: 1em;
-    margin-top: -0.4em;
+    margin-top: -0.3em;
+    margin-bottom: -0.1em;
     font-variation-settings: 'wght' 200;
 }
 
