--- a/static/styles.css
+++ b/static/styles.css
@@ -127,6 +127,14 @@ body {
     font-variation-settings: 'wght' 200;
 }
 
+.line {
+    border-bottom: 1px solid white;
+    margin: 2rem;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .author {
     font-size: 1.5rem;
     margin-top: -0.75rem;
